2007-03-03  Maximilien Cuony
	* Implementation of firegpgGPG.listkey(private)
	* Moved some function to firegpgGPG
	* FireGPG context menu added
	* Basic functions for GPGLin.Sign and GPGLin.Verif
	* Basic classes and functions for using GPG added 
	  (sample don't work for the moment)

2007-03-03  Achraf cherti
	* little modification in linux.sh (comments)
	* GMail CheckBox in "options" dialog
	* somes improvements in the style of the code of *.js

2007-03-02  Achraf cherti
	* template generated with the wizard
	* type and description added to install.rdf